fix get(0)